--- a/EazeChallenge/Strings.plist
+++ b/EazeChallenge/Strings.plist
@@ -2,11 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>giphy_api_key</key>
+	<key>GIPHY_API_KEY</key>
 	<string>rDUhVfLAT1PPztPkpCaFhS9Dnds1HQZC</string>
-	<key>search_prompt</key>
-	<string>SEARCH A GIF</string>
-	<key>cell_identifier</key>
+	<key>SEARCH_PROMPT</key>
+	<string>TYPE TO SEARCH A GIF</string>
+	<key>CELL_IDENTIFIER</key>
 	<string>cellIdentifier</string>
 </dict>
 </plist>
